When the system needs a reboot, reboot when clicking notifier

Otherwise it opens Discover's updates page which is blank, because the
user has already performed all the updates. That's a bit silly. Let's
instead make it reboot, and change the notifier's icon and text to
reflect this.

BUG: 423242
FIXED-IN: 5.20.0